# G4Basic

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  G4Basic.cpp  testrun.mac
cfg/: vis.mac
src/: CMakeLists.txt  DetectorConstruction.cpp  DetectorConstruction.h  EventAction.cpp  EventAction.h  PrimaryGeneration.cpp  PrimaryGeneration.cpp~  PrimaryGeneration.h  RunAction.cpp  RunAction.h  SDPlanes.cpp  SDPlanes.h  SteppingAction.cpp  SteppingAction.h
